force-app/main/default/objects/User_Story__c/User_Story__c.object-meta.xml
<CustomObject>
    <label>User Story</label>
    <nameField>
        <label>User Story Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Stories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>