force-app/main/default/objects/User_Story__c/fields/Acceptance_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Criteria__c</fullName>
    <label>Acceptance Criteria</label>
    <type>TextArea</type>
</CustomField>