force-app/main/default/objects/User_Story__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Please Describe the changes you need.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>