force-app/main/default/objects/User_Story__c/fields/Effort__c.field-meta.xml
<CustomField>
    <fullName>Effort__c</fullName>
    <description>Effort in hours to complete the task</description>
    <inlineHelpText>give estimated hours to complete this task</inlineHelpText>
    <label>Effort</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>