force-app/main/default/objects/User_Story__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To Do</fullName>
                <default>true</default>
                <label>To Do</label>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>In Dev</fullName>
            </value>
            <value>
                <fullName>In QA</fullName>
            </value>
            <value>
                <fullName>QA Pass</fullName>
            </value>
            <value>
                <fullName>In UAT</fullName>
            </value>
            <value>
                <fullName>To Deploy</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>